# reveal-yaml-rs

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yaml  gh-deploy.yaml  gh-pages-deploy.yaml
assets/: blank.yaml  reveal.yaml
src/: blank.rs  content.rs  fmt.rs  lib.rs  loader.rs  main.rs  pack.rs  project.rs  serve.rs  update.rs
src/assets/: blank.yaml  reveal.yaml  template.html
src/loader/: background.rs  content.rs  error.rs  footer.rs  js_option.rs  js_plugin.rs  mod.rs  slides.rs  visible_title.rs  wrap_string.rs
src/loader/content/: frag_map.rs  lay_img.rs  marked.rs  media.rs  mod.rs
src/project/: background.rs  content.rs  error.rs  footer.rs  js_option.rs  js_plugin.rs  metadata.rs  mod.rs  slides.rs  to_html.rs  wrap_string.rs
src/project/content/: frag_map.rs  lay_img.rs  marked.rs  media.rs  mod.rs  sized.rs
src/serve/: edit_mode.rs  mod.rs  site.rs
