[package]
name = "reveal-yaml"
description = "A YAML project manager serving Reveal.js slides."
version = "1.0.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/KmolYuan/reveal-yaml-rs"
readme = "README.md"
keywords = ["cli", "web", "yaml", "revealjs", "slideshow"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
yaml-peg = { version = "0.27", features = ["serde"] }
temp-dir = "0.1"
zip = "0.6"
reqwest = "0.11"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
webbrowser = "0.6"
pulldown-cmark = "0.9"
